# capauth

./: .cursorrules  .dockerignore  .gitignore  AGENTS.md  AI-ADVOCATE.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.authentik-capauth  MISSION.md  README.md  SKILL.md  index.d.ts  index.js  integrations  package.json  pyproject.toml  skill.yaml
.github/workflows/: ci.yml  publish.yml
authentik-custom/: capauth_migrate.py  user_settings.py
browser-extension/: .gitignore  RELEASING.md  background.js  manifest.firefox.json  manifest.json  package-lock.json  package.json  vitest.config.js
browser-extension/content_scripts/: cross_origin_signing.js  detector.js
browser-extension/lib/: openpgp.js
browser-extension/options/: options.html  options.js
browser-extension/popup/: popup.css  popup.html  popup.js
browser-extension/scripts/: build.js  generate-icons.js
browser-extension/stages/: AuthenticatorSelectionStage.js  CapAuthStage.js  QRDisplayStage.js  SignatureVerificationStage.js  StagePipeline.js
browser-extension/submission/: STORE_LISTING.md  privacy-policy.md
browser-extension/tests/unit/: background.test.js  detector.test.js  openpgp.test.js
deploy/capauth-service/: .env.example  deploy.sh  docker-compose.yml
deploy/forgejo-capauth/: docker-compose.yml
docs/: ARCHITECTURE.md  AUTHENTIK_CUSTOM_STAGE.md  AUTHENTIK_DEPLOYMENT_SKSSO.md  AUTHENTIK_FORGEJO_DEPLOYMENT.md  CLAIMS.md  CRYPTO_SPEC.md  INTEGRATION_BLUEPRINT.md  PROTOCOL.md  ZERO_KNOWLEDGE_PROFILE.md
openclaw-plugin/: package.json
openclaw-plugin.archived-2026-04-23/src/: openclaw.plugin.json
openclaw-plugin/src/: index.ts
scripts/: build_authentik_capauth_image.sh
src/capauth/: __init__.py  apps.py  cli.py  did.py  exceptions.py  identity.py  login.py  mesh.py  models.py  pma.py  profile.py  registry.py  sync.py
src/capauth.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/capauth/authentik/: __init__.py  api.py  claims_mapper.py  nonce_store.py  stage.py  urls.py  verifier.py
src/capauth/crypto/: __init__.py  base.py  gnupg_backend.py  pgpy_backend.py
src/capauth/discovery/: __init__.py  base.py  file_discovery.py  mdns.py  syncthing.py
src/capauth/integrations/: __init__.py
src/capauth/integrations/forgejo/: __init__.py  auth_flow.py  cli.py  config.py  forgejo_api.py  oidc_provider.py
src/capauth/integrations/forgejo/tests/: __init__.py  test_auth_flow.py  test_cli.py  test_config.py  test_forgejo_api.py  test_oidc_provider.py
src/capauth/integrations/nextcloud/: composer.json  phpunit.xml
src/capauth/integrations/nextcloud/appinfo/: app.php  info.xml  routes.php
src/capauth/integrations/nextcloud/css/: login.css
src/capauth/integrations/nextcloud/js/: login.js
src/capauth/integrations/nextcloud/lib/BackgroundJob/: PruneExpiredNonces.php
src/capauth/integrations/nextcloud/lib/Controller/: LoginController.php  TokenController.php
src/capauth/integrations/nextcloud/lib/Db/: KeyRegistry.php
src/capauth/integrations/nextcloud/lib/Exception/: CapAuthUnauthorizedException.php
src/capauth/integrations/nextcloud/lib/Middleware/: PgpVerificationMiddleware.php
src/capauth/integrations/nextcloud/lib/Migration/: CreateKeyRegistryTable.php
src/capauth/integrations/nextcloud/tests/: bootstrap.php
src/capauth/migrations/: 0001_initial.py  __init__.py
src/capauth/service/: __init__.py  app.py  keystore.py  server.py
stages/ak-stage-capauth/: package-lock.json  package.json  vite.config.js
stages/ak-stage-capauth/src/: CapAuthStage.test.js  CapAuthStage.vue  index.js
tests/: conftest.py  test_claims_mapper.py  test_crypto.py  test_home_resolution.py  test_identity.py  test_login.py  test_mesh.py  test_nextcloud_app.py  test_nonce_store.py  test_pma.py  test_profile.py  test_qr_login.py  test_real_pgp_e2e.py  test_register_cli.py  test_registry.py  test_service.py  test_syncthing_discovery.py  test_verifier.py  test_zk_profile.py
web/: README.md
web/stages/capauth/: CapAuthStage.ts
(+11 files in other folders)
